Attempt at correcting alignment Needs a bit of tidying up

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,14 @@ h1, h2, p, a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h1 {
-    font-size: 500%;
+h1, h2 {
+    vertical-align: middle; 
     line-height: 0%;
 }
 
-h2 {
-    line-height: 0%;
+h1 {
+    font-size: 500%;
+    padding: 40px 0px 20px 0px;
 }
 
 footer {
